[workspace]
members = [
    "zenoh_consensus",
    "zenoh-benchmark",
    "spatial-query",
]
exclude = [
    "reliable_broadcast",
]

[profile.dev.package."*"]
opt-level = 1

[profile.dev.build-override]
opt-level = 3

[profile.release]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[patch.crates-io]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "branch_0.5.0-beta.9" }
