[workspace]
members = [
    "zenoh-benchmark",
    "spatial-query",
]
exclude = [
    "reliable_broadcast",
    "zenoh_consensus",
]

[profile.dev.package."*"]
opt-level = 1

[profile.dev.build-override]
opt-level = 3

[profile.release]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[patch.crates-io]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", rev = "90539129b1a7c9e8c7d7daaa84138d093f71fedf" }
