[package]
name = "reliable_broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-std = "=1.9.0"
dashmap = "5.0.0"
derivative = "2.2.0"
flume = "0.10.9"
futures = "0.3.17"
guard = "0.5.1"
log = "0.4.14"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
uhlc = "0.4.0"
uuid = { version = "0.8.2", features = ["serde"] }
zenoh = { version = "0.6.0-dev.0", git = "https://github.com/eclipse-zenoh/zenoh.git", rev = "19cbbccbfd9b926164dfefd2a36c83145bcc1cc7" }

[dev-dependencies]
humantime-serde = "1.0.1"
json5 = "0.4.1"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
