[package]
name = "spatial-query"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = "0.9.1"
zenoh = "0.5.0-beta.8"
async-std = "1.9.0"
futures = "0.3.17"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1.11.0", features = ["sync"] }
serde = { version = "1.0.130", features = ["derive"] }
