[package]
name = "spatial-query"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = "0.9.3"
zenoh = "0.6.0-dev.0"
async-std = "1.11.0"
futures = "0.3.21"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1.18.1", features = ["sync"] }
serde = { version = "1.0.137", features = ["derive"] }
