[package]
name = "adlink-coop-survey"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
memmap = "0.7.0"
nix = "0.19.1"
page_size = "0.4.2"
rand = "0.8.3"
shared_memory = "0.11.4"
