[package]
name = "zenoh-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
async-std = { version = "1.9.0", features = ["attributes"] }
collected = "0.4.0"
futures = "0.3.19"
zenoh = "0.5.0-beta.9"
