[package]
name = "zenoh-consensus"
version = "0.1.0"
authors = ["Hsiang-Jui Lin <jerry73204@gmail.com>", "Yi-Hung Kuo <50904241+eurc17@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "0.5.0-beta.8"
async-std = "1.9.0"
futures = "0.3.17"
uhlc = "0.3.1"
tokio = { version = "1.11.0", features = ["sync", "macros"] }
anyhow = "1.0.43"
serde_json = "1.0.67"
serde = { version = "1.0.130", features = ["derive"] }
derivative = "2.2.0"
dashmap = "4.0.2"
log = "0.4.14"
owning_ref = "0.4.1"
tokio-stream = "0.1.7"
rand = "0.8.4"
pretty_env_logger = "0.4.0"
json5 = "0.3.0"

[dev-dependencies]
json5 = "0.3.0"
