[package]
name = "zenoh-consensus"
version = "0.1.0"
authors = ["Hsiang-Jui Lin <jerry73204@gmail.com>", "Yi-Hung Kuo <50904241+eurc17@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "0.5.0-beta.8"
async-std = "1.9.0"
futures = "0.3.17"
uhlc = "0.3.1"
tokio = { version = "1.11.0", features = ["sync", "macros"] }
anyhow = "1.0.43"
serde_json = "1.0.67"
serde = { version = "1.0.130", features = ["derive"] }
derivative = "2.2.0"
dashmap = "4.0.2"
log = "0.4.14"
owning_ref = "0.4.1"
tokio-stream = "0.1.7"
rand = "0.8.4"
pretty_env_logger = "0.4.0"
json5 = "0.3.0"
sha2 = "0.9.8"
edcert = "9.0.1"
maplit = "1.0.2"

[patch.crates-io]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", rev = "bd2255dc91359774ea89e29631a743a384fa6899" }
# zenoh = { git = "https://github.com/NEWSLabNTU/zenoh.git", branch = "newslab-patches" }
# zenoh = { path = "/home/jerry73204/lab/zenoh/zenoh" }
# async-std = { path = "/home/jerry73204/data/repos/async-std" }
# async-global-executor = { path = "/home/jerry73204/data/repos/async-global-executor" }
# async-executor = { path = "/home/jerry73204/data/repos/async-executor" }
nix = { git = "https://github.com/nix-rust/nix.git", tag = "v0.20.0" }


[dev-dependencies]
json5 = "0.3.0"
